lb-alb-ingress/app1-deploy-nodeport-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deploy
  labels: 
    app: app1-nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels: 
        app: app1-nginx
    spec: 
      containers: 
        - name: app1-nginx
          image: stacksimplify/kube-nginxapp1:1.0.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: app1-nginx-nodeport-svc
  labels: 
    app: app1-nginx
  annotations:

spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
    - targetPort: 80
      port: 80
