lb-alb-ingress/alb-ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1-nginx
  labels: 
    app: app1-nginx
  annotations:
    alb.ingress.kubernetes.io/load.balancer.name: app1ingressrules
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'

spec:
  ingressClassName: my-aws-ngress-lcass
  rules:
  - http: 
      paths:
      - path: /app1
        pathType: Prefix
        backend: 
          service: 
            name: app1-nginx-nodeport-svc
            port: 
              number: 80
